--- a/TP5_Grupo12/pom.xml
+++ b/TP5_Grupo12/pom.xml
@@ -58,6 +58,14 @@
 		    <artifactId>webjars-locator</artifactId>
 		    <version>0.45</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+			<version>2.6.7</version>
+		</dependency>
+		
 		
 	</dependencies>
 
