--- a/TP5_Grupo12/pom.xml
+++ b/TP5_Grupo12/pom.xml
@@ -63,9 +63,25 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-			<version>2.6.7</version>
+			<!-- <version>2.6.7</version>  -->
 		</dependency>
-		
+	
+		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-data-jpa -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+			<!-- <version>2.7.0</version> -->
+		</dependency>
+	
+	
+		<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<!-- <version>8.0.29</version> -->
+		</dependency>
+
+					
 		
 	</dependencies>
 
